manifests/base/deployment.yaml
# deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-deployment
  namespace: security-hardened-app
  labels:
    app: security-hardened-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: security-hardened-app
  template:
    metadata:
      labels:
        app: security-hardened-app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: secure-container
        image: security-hardened-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        securityContext:
          capabilities:
            drop:
              - ALL
          allowPrivilegeEscalation: false
          runAsNonRoot: true
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
