manifests/base/service.yaml
# service.yaml

apiVersion: v1
kind: Service
metadata:
  name: secure-service
  namespace: security-hardened-app
spec:
  selector:
    app: security-hardened-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
